<resources>
    <string name="app_name">Mercado Libre Challenge</string>
    <string name="list_activity_title">Productos - Consulta</string>
    <string name="detail_activity_title">Producto - Detalle</string>
    <string name="search_hint">Buscar...</string>
    <string name="product_hint_orden">Orden</string>
    <string name="product_hint_nombre">Nombre</string>
    <string name="product_hint_price">Precio</string>
    <string name="tn_photo">tnPhoto</string>
    <string name="tn_name">tnName</string>

    <!-- Values Activity Main -->
    <string name="value_author">Autor</string>
    <string name="value_name_author">Jaime Daniel Vallejo Peña</string>
    <string name="value_phone_author">+57 (321) 254-55-34</string>
    <string name="value_email_author">jaimed.vallejo@gmail.com</string>
    <string name="value_description_author">Ingeniero de sistemas, Excelentes conocimientos en el área de sistemas, es una persona con la capacidad y el interés de aprender cosas nuevas, le gusta investigar sobre temas relacionados con la tecnología. \n
\nBuenas relaciones personales, gran capacidad de escucha y comunicación, con un alto sentido de responsabilidad, honestidad y compromiso.</string>
</resources>